--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="password_hint">Password</string>
     <string name="login_button_label">Login</string>
     <string name="signup_text">Sign Up</string>
+    <string name="title_activity_signup">SignupActivity</string>
 
 </resources>
