--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="login_button_label">Login</string>
     <string name="signup_text">Sign Up</string>
     <string name="title_activity_signup">SignupActivity</string>
+    <string name="email_hint">Email</string>
+    <string name="sign_up_button_label">Sign Up</string>
 
 </resources>
