--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="signup_error_title">Oops!</string>
     <string name="login_error_message">Please make sure you enter a Username and Password!</string>
     <string name="login_error_title">Oops!</string>
+    <string name="action_logout">Logout</string>
+    <string name="menu_logout_label">Logout</string>
 
 </resources>
