--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,14 @@
     <string name="menu_edit_friends_label">Edit Friends</string>
     <string name="title_activity_edit_friends">Edit Friends</string>
     <string name="error_title">Oops! We\'re sorry!</string>
+    <string name="menu_camera_label">Camera</string>
+    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
+    <string name="general_error">Sorry, there was an error!</string>
+    <string-array name="camera_choices">
+        <item>Take A Picture</item>
+        <item>Record A Video</item>
+        <item>Choose A Picture</item>
+        <item>Choose A Video</item>
+    </string-array>
 
 </resources>
