Add ChooseRecipients Activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,11 +31,14 @@
     <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
     <string name="error_opening_file">There was a problem with the selected file.</string>
     <string name="error_file_size_too_large">The selected file is too large. Please select a new file.</string>
+
     <string-array name="camera_choices">
         <item>Take A Picture</item>
         <item>Record A Video</item>
         <item>Choose A Picture</item>
         <item>Choose A Video</item>
     </string-array>
+
+    <string name="title_activity_recipients">Choose Recipients</string>
 
 </resources>
